# Windows-Searcher-Improved

./: .gitignore  CMakeLists.txt  README.md  build.bat  download_imgui.bat
src/: main.cpp  main.h
src/App/: App.cpp  App.h
src/CacheFind/: CacheFind.cpp  CacheFind.h
src/InputBuf/: InputBuf.cpp  InputBuf.h
src/Json/: Json.cpp  Json.h
src/MathParser/: MathParser.cpp  MathParser.h
src/Runner/: Runner.cpp  Runner.h
src/Searcher/: Searcher.cpp  Searcher.h
src/SettingsMenu/: SettingsMenu.cpp  SettingsMenu.h
src/helpers/: AppLogs.h  helper.h
